--- a/apps/vs-chat/package.json
+++ b/apps/vs-chat/package.json
@@ -17,6 +17,8 @@
     "@trpc/next": "10.0.0-proxy-beta.17",
     "@trpc/react": "10.0.0-proxy-beta.17",
     "@trpc/server": "10.0.0-proxy-beta.17",
+    "@dafrica/api": "1.0.0",
+    "@dafrica/utils": "1.0.0",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
