--- a/apps/vs-chat/package.json
+++ b/apps/vs-chat/package.json
@@ -10,6 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dafrica/api": "1.0.0",
+    "@dafrica/db": "1.0.0",
+    "@dafrica/utils": "1.0.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.4.0",
     "@tanstack/react-query": "^4.10.0",
@@ -17,11 +20,9 @@
     "@trpc/next": "10.0.0-proxy-beta.17",
     "@trpc/react": "10.0.0-proxy-beta.17",
     "@trpc/server": "10.0.0-proxy-beta.17",
-    "@dafrica/api": "1.0.0",
-    "@dafrica/utils": "1.0.0",
-    "@dafrica/db": "1.0.0",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
+    "next-transpile-modules": "^9.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -41,7 +42,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.4.0",
     "tailwindcss": "^3.1.6",
-    "typescript": "^4.8.4"
+    "typescript": "4.8.4"
   },
   "ct3aMetadata": {
     "initVersion": "6.3.0"
